syntax = "proto3";

option csharp_namespace = "Luxelot.Apps.FileServerApp.Messages";

message AuthChannelBegin {
    uint32 prot_ver = 1;
    bytes session_pub_key = 2;
}